test/expr/bad-storeglobal-too-many.txt
;;; ERROR: 1
(module (global i32)
  (func (store_global 0 (i32.const 0) (nop))))
(;; STDERR ;;;
expr/bad-storeglobal-too-many.txt:3:39: syntax error, unexpected (, expecting )
;;; STDERR ;;)
